rename design directory
